--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /node_modules
 /public/hot
-/storage/framework/views/
 /public/storage
+/storage/
+/storage/*.key
+/storage/
+/storage/
 /config/oracle.php
 /storage/framework/views/
 /vendor
